Rebrand to WorkflowMD
- Updated all branding from 'GHL Workflow Debugger' to 'WorkflowMD'
- Updated domain references to workflowmd.io
- Added logo files
- Updated package names, titles, footers, emails, PDFs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -79,7 +79,7 @@ ENABLE_METRICS=true
 # Free tier: 100 emails/day, Paid: Starting $19.95/month
 SENDGRID_API_KEY=SG.xxxxx-your-sendgrid-api-key-here
 SENDGRID_FROM_EMAIL=noreply@workflowdebugger.com
-SENDGRID_FROM_NAME=GHL Workflow Debugger
+SENDGRID_FROM_NAME=WorkflowMD
 
 # ===========================================
 # AWS SES EMAIL CONFIGURATION (ALTERNATIVE)
@@ -94,7 +94,7 @@ SENDGRID_FROM_NAME=GHL Workflow Debugger
 
 # Email sender configuration
 # SES_FROM_EMAIL=noreply@ghlworkflowdebugger.com
-# SES_FROM_NAME=GHL Workflow Debugger
+# SES_FROM_NAME=WorkflowMD
 
 # ===========================================
 # LEGACY SMTP (DEPRECATED - Use AWS SES above)
