--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ghl-workflow-debugger-frontend",
+  "name": "workflowmd-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
