--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,6 +20,7 @@ FRONTEND_URL=http://localhost:3001
 # ===========================================
 GHL_CLIENT_ID=your-client-id-here
 GHL_CLIENT_SECRET=your-client-secret-here
+GHL_SHARED_SECRET=your-shared-secret-here
 REDIRECT_URI=http://localhost:3000/auth/callback
 
 # For GHL Custom Menu Link SSO
