--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "@reactflow/minimap": "^11.7.14",
     "antd": "^5.12.0",
     "axios": "^1.5.0",
+    "canvas-confetti": "^1.9.2",
+    "dayjs": "^1.11.19",
     "framer-motion": "^12.34.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +26,7 @@
     "workbox-webpack-plugin": "^7.4.0"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0"
