--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "canvas-confetti": "^1.9.2",
     "dayjs": "^1.11.19",
     "framer-motion": "^12.34.0",
+    "lucide-react": "^0.563.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
