--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,7 +1,6 @@
 [build]
-  base = "frontend"
-  publish = "build"
-  command = "npm run build"
+  publish = "dist"
+  command = "npm install && npm run build"
 
 [build.environment]
   CI = "false"
