--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "reactflow": "^11.11.4",
     "recharts": "^3.7.0",
     "typescript": "^4.9.5",
+    "use-debounce": "^10.1.0",
     "workbox-webpack-plugin": "^7.4.0"
   },
   "devDependencies": {
