feat: PWA support - installable app
- Updated manifest.json with WMD short name, theme #1890ff, bg #141414
- Created sw.js service worker with caching and offline support
- Updated offline.html with styled offline page
- Added service worker registration to index.html
- Created SVG icons (192x192, 512x512)

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -9,14 +9,14 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "logo192.svg",
+      "type": "image/svg+xml",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
+      "src": "logo512.svg",
+      "type": "image/svg+xml",
       "sizes": "512x512",
       "purpose": "any maskable"
     }
@@ -33,14 +33,14 @@
       "short_name": "Dashboard",
       "description": "View your workflows",
       "url": "/dashboard",
-      "icons": [{ "src": "logo192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "logo192.svg", "sizes": "192x192" }]
     },
     {
       "name": "Workflow Graph",
       "short_name": "Graph",
       "description": "Visualize workflow structure",
       "url": "/workflow-graph",
-      "icons": [{ "src": "logo192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "logo192.svg", "sizes": "192x192" }]
     }
   ]
 }
