Integrate new logo and update tagline

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "FirstResponse",
   "short_name": "FR",
-  "description": "Win Every Lead. Respond First.",
+  "description": "Be the First, Win the Lead. Speed-to-lead analytics for GoHighLevel.",
   "icons": [
     {
       "src": "favicon.ico",
